--- a/.gitmodules
+++ b/.gitmodules
@@ -5,4 +5,8 @@
 [submodule "dev/simple-php"]
 	path = dev/simple-php
 	url = https://github.com/amazonwebservices/opsworks-demo-php-simple-app.git
-	branch = version1
+	branch = version2
+[submodule "ops/opsworks-example-cookbooks"]
+	path = ops/opsworks-example-cookbooks
+	url = git@github.com:amazonwebservices/opsworks-example-cookbooks.git
+	branch = master
